# CIRCMAN5.0

./: .gitignore  .pre-commit-config.yaml  LICENSE  Project Tree.txt  README.md  complete_demo_output.txt  demo_script.py  file_list.txt  logs.txt  output.txt  project_tree.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  test_energy_data.csv  test_imports.py  test_material_data.csv  test_process_data.csv  test_production_data.csv  thesis_outline.md
analysis_results/run_20250218_173523/: analysis_summary.txt
data/synthetic/: test_energy_data.csv  test_material_data.csv  test_production_data.csv
docs/: CONTRIBUTING.md  README.md  development_roadmap.md  implementation_details.md  system_analysis.md  system_documentation.md
docs/api/: API_documentation.md  README.md  adapter_api_reference.md  ai_ml_api_reference.md  data_schemas_reference.md  dt_ai_integration_api.md  dt_api_reference.md  dt_event_system_api.md  dt_human_interface_api.md  human_interface_api_reference.md  monitoring_api_reference.md  (+2 more)
examples/: complete_demo.py  demo_analysis.py  demo_script.py  digital_twin_ai_integration_demo.py  digital_twin_demo.py  enhanced_optimization_demo.py  manufacturing_optimization_demo.py  test_runner.py  visualize_optimization.py
notebooks/: requirements.txt
scripts/: cleanup.py  digital_twin_perf_vis.py  fix_imports.py  fix_project_structure.py  list_files.py  reorganize_tests.sh  run_dt_performance_demo.sh  standardize_timestamp.py  verify_structure.py  visualize_events.py
src/: __init__.py
tests/: README.md  test_manufacturing.py
(+346 files in other folders)
