[tool.poetry]
name = "circman5"
version = "0.1.0"
description = "Human-Centered AI-aided Framework for PV Manufacturing"
authors = ["Mostafa Shami mostafashami15@gmail.com"]
packages = [{ include = "circman5", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
matplotlib = "^3.5.0"
seaborn = "^0.12.0"
openpyxl = "^3.0.10"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^7.1.3"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
